--- a/Css/style.css
+++ b/Css/style.css
@@ -47,7 +47,7 @@
  
   header{
    
-     background-image: linear-gradient(to bottom,var(--cor3),var(--cor5));
+     background-color: red;
      min-height: 150px;
      text-align: center;
      padding-top: 40px;
