--- a/Css/style.css
+++ b/Css/style.css
@@ -31,7 +31,7 @@
  
  
  body{
-     background-color:var(--cor0);
+    background-color: red;
      font-family: var(--fonte-padrao);
      
   }
@@ -47,7 +47,7 @@
  
   header{
    
-     background-color: red;
+    background-image: linear-gradient(to bottom,var(--cor3),var(--cor5));
      min-height: 150px;
      text-align: center;
      padding-top: 40px;
