--- a/Css/style.css
+++ b/Css/style.css
@@ -31,7 +31,7 @@
  
  
  body{
-    background-color: (--cor0);
+    background-color: var(--cor0);
      font-family: var(--fonte-padrao);
      
   }
